Add Consumer Liveliness section with detailed explanations on heartbeat and poll threads